make list in metadatacontroller threadsafe